Método crear realizado